--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "4.1.3",
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
     "@angular/compiler-cli": "4.1.3",
@@ -26,6 +27,7 @@
     "@ionic/storage": "2.0.1",
     "ionic-angular": "3.6.0",
     "ionicons": "3.0.0",
+    "marked": "^0.3.6",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
@@ -34,8 +36,10 @@
     "@ionic/app-scripts": "2.1.3",
     "@ionic/cli-plugin-cordova": "1.6.2",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "@types/node": "^8.0.20",
     "ionic": "3.7.0",
-    "typescript": "2.3.4"
+    "typescript": "2.3.4",
+    "@types/marked": "0.0.28"
   },
   "description": "An Ionic project"
 }
