--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@ionic/app-scripts": "2.1.3",
     "@ionic/cli-plugin-cordova": "1.6.2",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "@types/marked": "0.0.28",
     "@types/node": "^8.0.20",
-    "ionic": "3.7.0",
-    "typescript": "2.3.4",
-    "@types/marked": "0.0.28"
+    "ionic": "3.9.2",
+    "typescript": "2.3.4"
   },
   "description": "An Ionic project"
 }
